# DevStack

./: README.md
Infrastructure/: Notes.md
Infrastructure/Nomad/: README.md
Infrastructure/Nomad/ping-job/: test.nomad
Infrastructure/terraform-azure-test/: main.tf  vars.tf
TestFrameworks/: pytest.md
TestFrameworks/pytest/: Notes.md  pyproject.toml
TestFrameworks/pytest/tests/: test_example.py
kafka/: README.md  docker-compose.yml
